--- a/lobster/commands/data/template.html
+++ b/lobster/commands/data/template.html
@@ -241,7 +241,7 @@
         </style>
 
         {% macro label_wrapper(img_name, label) %}
-        <li><a href="{{ img_name }}"><img alt="{{ label }}"
+        <li><a class="workflow" href="{{ img_name }}"><img alt="{{ label }}"
                     {% for k, v in kwargs.iteritems() %}
                         {{ k }}="{{ v }}"
                     {% endfor %}
@@ -260,12 +260,32 @@
                 });
             };
 
+            var last_workflow = 'all';
+
             $(document).ready(function() {
                 $("tr.tasksummary").hide();
                 $("div.good.more").hide();
                 $("div.merge.more").hide();
                 $("table#logs").hide();
                 $("div.foreman.more").hide();
+
+                $("select#workflows").val("all");
+                $("select#workflows").change(function() {
+                    var current = $(this).val();
+                    $("a.workflow").attr("href", function(idx, href) {
+                        href = href.replace("-" + last_workflow + ".png", "-" + current + ".png");
+                        href = href.replace("-" + last_workflow + "-hist.png", "-" + current + "-hist.png");
+                        href = href.replace("-" + last_workflow + "-prof.png", "-" + current + "-prof.png");
+                        return href;
+                    });
+                    $("a.workflow img").attr("src", function(idx, src) {
+                        src = src.replace("-" + last_workflow + ".png", "-" + current + ".png");
+                        src = src.replace("-" + last_workflow + "-hist.png", "-" + current + "-hist.png");
+                        src = src.replace("-" + last_workflow + "-prof.png", "-" + current + "-prof.png");
+                        return src;
+                    });
+                    last_workflow = $(this).val();
+                });
 
                 $("a#tasksummary").bind('click', function() {
                     $("tr.tasksummary").toggle();
@@ -352,6 +372,14 @@
                     </div>
                 </li>
                 <li><a href="#navlobster"><span class="lobster">Lobster</span></a></li>
+                <li>
+                    Workflow(s):
+                    <select id="workflows">
+                        {% for label in workflows %}
+                        <option value="{{ label }}">{{ label }}</option>
+                        {% endfor %}
+                    </select>
+                </li>
             </ul>
         </nav>
     </head>
@@ -432,12 +460,12 @@
         <h1 id="navtasks">Task Summary</h1>
         {% if good_tasks or bad_tasks %}
         <div class="sidebar">
-            <a href="time-pie.png"><img alt="" src="time-pie.png"/></a>
+            <a class="workflow" href="time-pie-all.png"><img alt="" src="time-pie-all.png"/></a>
         </div>
         <div class="maincontent">
-            <a href="all-tasks-hist.png"><img alt="" src="all-tasks-hist.png"/></a>
+            <a class="workflow" href="all-tasks-all-hist.png"><img alt="" src="all-tasks-all-hist.png"/></a>
         {% if good_tasks %}
-            <h3>Efficiency</h3>
+            <h3>Efficiency (all workflows)</h3>
             <a href="cpu-wall-hist.png"><img alt="" src="cpu-wall-hist.png"/></a>
             <a href="cpu-wall-int-hist.png"><img alt="" src="cpu-wall-int-hist.png"/></a>
         {% endif %}
@@ -447,44 +475,44 @@
         <h2 id="navgood">Successful Tasks</h2>
         {% if good_tasks %}
         <div class="sidebar">
-            <a href="good-time-detail-pie.png"><img alt="" src="good-time-detail-pie.png"/></a>
+            <a class="workflow" href="good-time-detail-pie-all.png"><img alt="" src="good-time-detail-pie-all.png"/></a>
         </div>
         <div class="maincontent">
             <h3>Task Footprint</h3>
-            <a href="good-memory-hist.png"><img alt="" src="good-memory-hist.png"/></a>
-            <a href="good-workdir-footprint-hist.png"><img alt="" src="good-workdir-footprint-hist.png"/></a>
+            <a class="workflow" href="good-memory-all-hist.png"><img alt="" src="good-memory-all-hist.png"/></a>
+            <a class="workflow" href="good-workdir-footprint-all-hist.png"><img alt="" src="good-workdir-footprint-all-hist.png"/></a>
             <h3>Task Breakdown</h3>
             <p>
                 <span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
                 <span id="goodmore" class="button depressed"><a href="#" id="goodmore">show timeline breakdown</a></span>
             </p>
             <div class="good more"><ul class="img-list">
-                {{ label_wrapper('good-eviction-hist.png', 'Time lost to eviction or exceeding requested resources', class="good") }}
+                {{ label_wrapper('good-eviction-all-hist.png', 'Time lost to eviction or exceeding requested resources', class="good") }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('good-runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
-                {{ label_wrapper('good-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
+                {{ label_wrapper('good-runtime-all-hist.png', 'Time from wrapper start to processing end', class='good') }}
+                {{ label_wrapper('good-overhead-all-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
             </ul></div>
             <div class="good more"><ul class="img-list">
-                {{ label_wrapper('good-transfer-in-hist.png', 'Time to transfer input files', class='good') }}
-                {{ label_wrapper('good-startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='good') }}
-                {{ label_wrapper('good-stage-in-hist.png', 'Time to stage in all additional input files', class='good more') }}
-                {{ label_wrapper('good-prologue-hist.png', 'Time to run the prologue command', class='good more') }}
-                {{ label_wrapper('good-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
-                {{ label_wrapper('good-setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='good') }}
-                {{ label_wrapper('good-file-open-hist.png', 'Time between requesting and opening file', class='good') }}
-                {{ label_wrapper('good-setup-task-hist.png', 'Time between opening file and begin processing the first event', class='good') }}
+                {{ label_wrapper('good-transfer-in-all-hist.png', 'Time to transfer input files', class='good') }}
+                {{ label_wrapper('good-startup-all-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='good') }}
+                {{ label_wrapper('good-stage-in-all-hist.png', 'Time to stage in all additional input files', class='good more') }}
+                {{ label_wrapper('good-prologue-all-hist.png', 'Time to run the prologue command', class='good more') }}
+                {{ label_wrapper('good-setup-release-all-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
+                {{ label_wrapper('good-setup-cms-all-hist.png', 'Time from from wrapper ready to file requested', class='good') }}
+                {{ label_wrapper('good-file-open-all-hist.png', 'Time between requesting and opening file', class='good') }}
+                {{ label_wrapper('good-setup-task-all-hist.png', 'Time between opening file and begin processing the first event', class='good') }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('good-processing-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
+                {{ label_wrapper('good-processing-all-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
             </ul></div>
             <div class="good more"><ul class="img-list">
-                {{ label_wrapper('good-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
-                {{ label_wrapper('good-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
-                {{ label_wrapper('good-epilogue-hist.png', 'Time to run the epilogue command', class='good more') }}
-                {{ label_wrapper('good-stage-out-hist.png', 'Time to stage out all output files', class='good more') }}
-                {{ label_wrapper('good-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
-                {{ label_wrapper('good-transfer-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='good more') }}
+                {{ label_wrapper('good-processing-cpu-all-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
+                {{ label_wrapper('good-processing-non-cpu-all-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
+                {{ label_wrapper('good-epilogue-all-hist.png', 'Time to run the epilogue command', class='good more') }}
+                {{ label_wrapper('good-stage-out-all-hist.png', 'Time to stage out all output files', class='good more') }}
+                {{ label_wrapper('good-transfer-out-wait-all-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
+                {{ label_wrapper('good-transfer-out-wq-all-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='good more') }}
             </ul></div>
         </div>
         {% else %}
@@ -494,43 +522,43 @@
         <h2 id="navmerge">Merge tasks</h2>
         {% if merge_tasks %}
         <div class="sidebar">
-            <a href="merge-time-detail-pie.png"><img alt="" src="merge-time-detail-pie.png"/></a>
+            <a class="workflow" href="merge-time-detail-pie-all.png"><img alt="" src="merge-time-detail-pie-all.png"/></a>
         </div>
         <div class="maincontent">
             <h3>Task Footprint</h3>
-            <a href="merge-memory-hist.png"><img alt="" src="merge-memory-hist.png"/></a>
+            <a class="workflow" href="merge-memory-all-hist.png"><img alt="" src="merge-memory-all-hist.png"/></a>
             <h3>Task Breakdown</h3>
             <p>
                 <span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
                 <span id="mergemore" class="button depressed"><a href="#" id="mergemore">show timeline breakdown</a></span>
             </p>
             <div class="merge more"><ul class="img-list">
-                {{ label_wrapper('merge-eviction-hist.png', 'Time lost to eviction', class="merge") }}
+                {{ label_wrapper('merge-eviction-all-hist.png', 'Time lost to eviction', class="merge") }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper start to processing end', class='merge') }}
-                {{ label_wrapper('merge-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='merge') }}
+                {{ label_wrapper('merge-runtime-all-hist.png', 'Time from wrapper start to processing end', class='merge') }}
+                {{ label_wrapper('merge-overhead-all-hist.png', 'Time from wrapper start to begin processing the first event', class='merge') }}
             </ul></div>
             <div class="merge more"><ul class="img-list">
-                {{ label_wrapper('merge-transfer-in-hist.png', 'Time to transfer input files', class='merge') }}
-                {{ label_wrapper('merge-startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='merge') }}
-                {{ label_wrapper('merge-stage-in-hist.png', 'Time to stage in all additional input files', class='merge more') }}
-                {{ label_wrapper('merge-prologue-hist.png', 'Time to run the prologue command', class='merge more') }}
-                {{ label_wrapper('merge-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='merge') }}
-                {{ label_wrapper('merge-setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='merge') }}
-                {{ label_wrapper('merge-file-open-hist.png', 'Time between requesting and opening file', class='merge') }}
-                {{ label_wrapper('merge-setup-task-hist.png', 'Time between opening file and begin processing the first event', class='merge') }}
+                {{ label_wrapper('merge-transfer-in-all-hist.png', 'Time to transfer input files', class='merge') }}
+                {{ label_wrapper('merge-startup-all-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='merge') }}
+                {{ label_wrapper('merge-stage-in-all-hist.png', 'Time to stage in all additional input files', class='merge more') }}
+                {{ label_wrapper('merge-prologue-all-hist.png', 'Time to run the prologue command', class='merge more') }}
+                {{ label_wrapper('merge-setup-release-all-hist.png', 'Time to set up release and initialize cms environment', class='merge') }}
+                {{ label_wrapper('merge-setup-cms-all-hist.png', 'Time from from wrapper ready to file requested', class='merge') }}
+                {{ label_wrapper('merge-file-open-all-hist.png', 'Time between requesting and opening file', class='merge') }}
+                {{ label_wrapper('merge-setup-task-all-hist.png', 'Time between opening file and begin processing the first event', class='merge') }}
             </ul></div>
             <div><ul class="img-list">
-                {{ label_wrapper('merge-processing-hist.png', 'Time between begin processing the first event and finish processing', class='merge') }}
+                {{ label_wrapper('merge-processing-all-hist.png', 'Time between begin processing the first event and finish processing', class='merge') }}
             </ul></div>
             <div class="merge more"><ul class="img-list">
-                {{ label_wrapper('merge-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='merge more') }}
-                {{ label_wrapper('merge-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='merge more') }}
-                {{ label_wrapper('merge-epilogue-hist.png', 'Time to run the epilogue command', class='merge more') }}
-                {{ label_wrapper('merge-stage-out-hist.png', 'Time to stage out all output files', class='merge more') }}
-                {{ label_wrapper('merge-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='merge more') }}
-                {{ label_wrapper('merge-transfer-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='merge more') }}
+                {{ label_wrapper('merge-processing-cpu-all-hist.png', 'CPU processing time (from cmssw)', class='merge more') }}
+                {{ label_wrapper('merge-processing-non-cpu-all-hist.png', 'Total processing time minus CPU processing time', class='merge more') }}
+                {{ label_wrapper('merge-epilogue-all-hist.png', 'Time to run the epilogue command', class='merge more') }}
+                {{ label_wrapper('merge-stage-out-all-hist.png', 'Time to stage out all output files', class='merge more') }}
+                {{ label_wrapper('merge-transfer-out-wait-all-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='merge more') }}
+                {{ label_wrapper('merge-transfer-out-wq-all-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='merge more') }}
             </ul></div>
         </div>
         {% else %}
@@ -540,14 +568,14 @@
         <h2 id="navbad">Failed tasks</h2>
         {% if bad_tasks %}
         <div class="sidebar">
-            <a href="failed-pie.png"><img alt="" src="failed-pie.png"/></a>
+            <a class="workflow" href="failed-pie-all.png"><img alt="" src="failed-pie-all.png"/></a>
         </div>
         <div class="maincontent">
             <h3>Failure Modes</h3>
-            <a href="failed-tasks-hist.png"><img alt="" src="failed-tasks-hist.png"/></a>
+            <a class="workflow" href="failed-tasks-all-hist.png"><img alt="" src="failed-tasks-all-hist.png"/></a>
             <h3>Task Footprint</h3>
-            <a href="failed-memory-hist.png"><img alt="" src="failed-memory-hist.png"/></a>
-            <a href="failed-workdir-footprint-hist.png"><img alt="" src="failed-workdir-footprint-hist.png"/></a>
+            <a class="workflow" href="failed-memory-all-hist.png"><img alt="" src="failed-memory-all-hist.png"/></a>
+            <a class="workflow" href="failed-workdir-footprint-all-hist.png"><img alt="" src="failed-workdir-footprint-all-hist.png"/></a>
             <h3>Task Logs</h3>
             <p><span id="logs" class="button depressed"><a href="#" id="logs">show log files</a></span></p>
             <table id="logs" class="fancy">
@@ -565,7 +593,7 @@
                     <td>{{ code }}</td>
                     <td>{{ values[0] }}</td>
                     {% for id, files in values[1]|dictsort|reverse %}
-                    <td>{% for file in files %} <a href="logs/{{ id }}/{{ file }}">{{ file }}</a>{% endfor %}</td>
+                    <td>{% for file in files %} <a href="logs-all/{{ id }}/{{ file }}">{{ file }}</a>{% endfor %}</td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
@@ -589,8 +617,8 @@
             <a href="fraction-hist.png"><img alt="" src="fraction-hist.png"/></a>
             <h3>Output Performance</h3>
             {% if good_tasks %}
-            <a href="output-hist.png"><img alt="" src="output-hist.png"/></a>
-            <a href="output-total-plot.png"><img alt="" src="output-total-plot.png"/></a>
+            <a href="output-hist.png"><img alt="" src="output-all-hist.png"/></a>
+            <a href="output-total-plot.png"><img alt="" src="output-total-all-plot.png"/></a>
             <a href="units-total-plot.png"><img alt="" src="units-total-plot.png"/></a>
             {% else %}
             <p>No output yet!</p>
